--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ otp_release:
   - 18.3
   - 19.0
 env:
-  - MIX_ENV=test
-  - VERBOSE_TESTS=true
+  - MIX_ENV=test VERBOSE_TESTS=true
 script:
   - mix test
 notifications:
