Add OTP 20 to test matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,13 @@ elixir:
 otp_release:
   - 18.3
   - 19.3
+  - 20.0
 env:
   - MIX_ENV=test VERBOSE_TESTS=true
+matrix:
+  exclude:
+    - elixir: 1.3
+      otp_release: 20.0
 script:
   - mix test --exclude=expensive
   - mix test --only=expensive
