--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ matrix:
   exclude:
     - elixir: 1.3
       otp_release: 20.0
+    - elixir: 1.6
+      otp_release: 18.3
 script:
   - mix test --exclude=expensive
   - mix test --only=expensive
