Fix reload_config test

--- a/test/support/simple.sys.config
+++ b/test/support/simple.sys.config
@@ -1,3 +1,1 @@
-[{distillery,
-        [{config_providers, [
-            {'Elixir.Mix.Releases.Config.Providers.Elixir', [<<"test/support/simple.config.exs">>]}]}]}].
+[{distillery, [{simple, success}]}].
