Try to fix unset env var in appveyor

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,7 +21,7 @@ cache:
 init:
   - pwsh: choco install erlang
   - pwsh: choco install elixir
-  - pwsh: $Env:PATH = "C:\ProgramData\chocolatey\lib\Elixir\bin;C:\ProgramData\chocolatey\bin;$Env:PATH"
+  - pwsh: [Environment]::SetEnvironmentVariable("PATH", "C:\ProgramData\chocolatey\lib\Elixir\bin;C:\ProgramData\chocolatey\bin;$Env:PATH", "User")
   - pwsh: refreshenv
 install:
   - pwsh: mix local.hex --force
