--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ elixir:
 otp_release:
   - 21.0
   - 22.0
+matrix:
+  exclude:
+    - elixir: 1.6
+      otp_release: 22.0
 env:
   - MIX_ENV=test VERBOSE_TESTS=true
 cache:
